loading external icon sets from Odysseus home directory
Former-commit-id: 6e2194797c355fa87f126b3805018244628577b6